# Koopman-EML

./: .gitignore  LICENSE  README.md  REFERENCES.md  pyproject.toml  requirements.txt
baselines/: __init__.py  deep_koopman.py  edmd.py  pysr_koopman.py
csrc/sleef_eml/: eml_cuda_kernel.cu
experiments/: benchmark_backends.py
experiments/ctf_lorenz/: compare.py  eval_complex.py  eval_e11_e12_parametric.py  eval_e1_e2_forecast.py  eval_e3_e6_noisy.py  eval_e7_e10_limited.py  eval_full_ctf.py  generate_ctf_scenarios.py  generate_data.py  run_all.py  run_deep.py  run_edmd.py  run_eml.py  run_progressive_depth.py  run_pysr.py
notebooks/: 01_eml_basics.ipynb  02_pysindy_eml.ipynb  03_ctf_lorenz.ipynb  04_results_analysis.ipynb
paper/: koopman_eml.tex  references.bib
preliminary/: koopman_eml.py  koopman_eml_writeup.html
results/benchmarks/: backend_comparison.json
results/ctf_lorenz/: RESULTS.md
results/ctf_lorenz/progressive_depth/: progressive_depth_results.json
src/koopman_eml/: __init__.py  analysis.py  ctf.py  eml_cuda_ext.py  eml_ops.py  eml_tree.py  koopman_model.py  sindy.py  training.py
tests/: test_complex_eml.py  test_ctf_evaluation.py  test_ctf_metrics.py  test_eml_ops.py  test_eml_tree.py  test_known_functions.py  test_sindy_integration.py
